--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -405,7 +404,7 @@ th {
 }
 
 body {
-  font: 12px Helvetica, Arial, sans-serif;
+  font: 12px Raleway, Verdana, sans-serif;
   line-height: 18px;
   color: #333;
   background: #103c63;
@@ -453,7 +452,7 @@ h3 {
 }
 
 h4, h5 {
-  font-family: "Arvo", sans-serif;
+  font-family: Raleway, Verdana, sans-serif;
   font-size: 15px;
   line-height: 18px;
 }
@@ -1076,7 +1075,6 @@ header:after {
 }
 
 .record {
-  clear: both;
   overflow: auto;
 }
 
@@ -1216,7 +1214,7 @@ header:after {
   height: 6em;
 }
 #recent-items .item h3 {
-  font-family: "Arvo", sans-serif;
+  font-family: Raleway, Verdana, sans-serif;
   font-size: 12px;
   margin-top: 0;
 }
@@ -1328,7 +1326,6 @@ ul.title-list {
 }
 
 .browse .item {
-  clear: both;
   float: left;
   width: 100%;
 }
@@ -1429,7 +1426,7 @@ ul.title-list {
 }
 
 .single-line {
-  display: block;
+  display: list-item;
   margin-left: 1em;
   margin-right: 1em;
 }
@@ -1443,18 +1440,13 @@ ul.title-list {
 }
 .single-line .item-meta {
   display: none;
-  position: relative;
+  width: 50%;
+  position: absolute;
   overflow: auto;
-  margin: 0.5ex 1em 1ex 2em;
-}
-
-.single-line::before {
-  content: '•';
-  padding-right: 0.5ex;
-}
-
-.single-line:hover .item-meta {
-  display: block;
+  padding: 1ex 1em;
+  border: thin solid #ca7;
+  background: #ffffff;
+  z-index: 100;
 }
 
 /* @end */
@@ -1672,7 +1664,7 @@ ul.title-list {
 }
 
 #collection-items .item h3 {
-  font-family: "Arvo", sans-serif;
+  font-family: Raleway, Verdana, sans-serif;
 }
 
 .collection-meta {
